// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lexer gets the return value of a function in the schemaect 1`] = `
Object {
  "lib": Object {
    "test": [Function],
  },
}
`;

exports[`lexer gets the return value of a function with an argument of nested schemaects 1`] = `
Object {
  "lib": Object {
    "test": [Function],
  },
}
`;

exports[`lexer gets the return value of a function with arguments 1`] = `
Object {
  "lib": Object {
    "test": [Function],
  },
}
`;

exports[`lexer gets the return value of a function with arguments that are arrays 1`] = `
Object {
  "lib": Object {
    "test": [Function],
  },
}
`;

exports[`lexer gets the return value of a function with arguments that are schemaects 1`] = `
Object {
  "lib": Object {
    "test": [Function],
  },
}
`;

exports[`lexer gets the return value of a non-namespaced function 1`] = `
Object {
  "test": [Function],
}
`;
